custom_endpoints/artifactory/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: artifactory
subsets:
  - addresses:
      - ip: 192.168.11.10
    ports:
      - port: 8082
