custom_endpoints/artifactory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artifactory
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
