custom_endpoints/artifactory/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "artifactory.uno.sh"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: artifactory
            port:
              number: 80
  tls:
  - hosts:
    - artifactory.uno.sh
    secretName: artifactory-ingress-tls
